@@ -1,3 +1,5 @@
-W: 19:MyClass.test: Access to a protected member _haha of a client class
-W: 28: Access to a protected member _protected of a client class
-W: 29: Access to a protected member _cls_protected of a client class
+W: 17:MyClass.test: Access to a protected member _haha of a client class
+W: 32: Access to a protected member _protected of a client class
+W: 33: Access to a protected member _protected of a client class
+W: 34: Access to a protected member _cls_protected of a client class
+W: 35: Access to a protected member _cls_protected of a client class
